--- a/public/styles.css
+++ b/public/styles.css
@@ -1,69 +1,64 @@
-
 html, body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(245, 167, 167);
 }
 
 html {
     font-size: 14 px;
 }
 
-
+/* FONTS */
+@font-face {
+  font-family: 'SequentialistBB';
+  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_1_0.woff2') format('woff2'),
+  url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff') format('woff');
+  font-style: normal;
+  font-weight: 400;
 }
 
-.quoteBubble {
+@font-face {
+  font-family: 'SequentialistBB';
+  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff2') format('woff2'),
+  url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff') format('woff');
+  font-style: italic;
+  font-weight: 400;
+}
 
-  min-height: 100vh; 
+
+* {
+box-sizing: border-box;
+}
+
+body {
+  font-family: SequentialistBB, cursive;
+  font-size: 2.5vw;
+  margin: 7rem 2rem;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tooltip {
+  font-size: 3rem;
+  display: inline;
+  position: relative;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-content: center;
+  background: #444;
+  border-radius: 3rem;
+  color: #fff;
+  padding: 2rem 4rem;
+  width: 50rem;
 }
-section { 
-  padding: 3rem; 
-}
-section:nth-of-type(1) {
-    background: #d52b21;
-}
-section:nth-of-type(2) {
-    background: #fff;
-}
-section:nth-of-type(3) {
-  background: #0388fe;
-}
-blockquote.bubble { 
-	background-position: center;
-  background-repeat: no-repeat !important;
-	background-size: 100% 100%;
-  margin: 0 auto;
-	text-align: center;
-	height: 0;
-	box-sizing: content-box;
-	line-height: 1;
-}
-blockquote.speech {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/speech-bubble.svg); 
-  width: 25%;
-  padding-top: 6%;
-	padding-bottom: 20%;
-}
-blockquote.whisper {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/whisper.svg); 
-  width: 25%;
-  font-size: 2vw;
-  color: #ccc;
-  font-style: italic;
-  padding: 6% 5% 15%;
-}
-blockquote.electric {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/electric.svg); 
-  width: 25%;
-  font-size: 2.4vw;
-  font-style: italic;
-  padding: 4% 6% 12% 0%;
-}
-blockquote.electric span {
-  display: block;
-  font-size: 3vw;
-  font-weight: bold;
-}
+
+.tooltip:before{
+  border: solid;
+  border-color: #444 transparent;
+  border-width: 6rem 3rem 0 6px;
+  content: "";
+  right: 4rem;
+  bottom: -6rem;
+  position: absolute;
 }
